fix: images on mobile devices

--- a/src/components/reference/reference.module.scss
+++ b/src/components/reference/reference.module.scss
@@ -34,6 +34,7 @@
 
 .profile {
   width: 4rem;
+  height: auto;
   grid-column-end: 1;
   border-radius: 100%;
 
